# Diabetic-Retinopathy

./: .gitignore  README.md  clean_and_reprocess.py  count_images.py  debug_config.py  debug_config_error.py  debug_model.py  debug_training_init.py  error.txt  main.py  monitor_training.py  phase23_completion_report.py  pyproject.toml  quick_test.py  requirements_phase4.txt  run_focused_training.py  run_hyperopt_training.py  run_hyperparameter_optimization.py  run_pipeline1_data_processing.py  run_pipeline2_data_pipeline.py  run_pipeline3_model_architecture.py  run_pipeline4_training_infrastructure.py  run_pipeline5_training_optimization.py  run_pipeline6_evaluation_analysis.py  run_simple_hyperopt.py  simple_config_test.py  test.ipynb  test_config.yaml  test_hyperopt_fixed.py  test_hyperopt_training.py  test_phase23.py  test_phase4.py  test_quick_training.py  test_segmentation_weight.py  test_simple_model_fix.py  test_simple_training.py  train.py  train_bulletproof.py  train_comprehensive.py  train_model.py  (+3 more)
configs/: base_config.yaml  hyperparameter_optimization_config.yaml  phase4_config.yaml  phase5_config.yaml  phase6_evaluation_config.yaml  simple_phase5_config.yaml
examples/: phase4_examples.py  phase6_examples.py
experiments/smoke_test/: config.yaml  training_results.yaml
notebooks/: 01_preprocessing_testing.ipynb  data_quality_assessment.ipynb
results/: phase23_completion_report.json
results/phase6_complete/: phase6_final_report_20250807_155214.html
results/phase6_final_test/: phase6_final_report_20250807_155405.html
results/phase6_test/: phase6_final_report_20250807_152617.html  phase6_final_report_20250807_153005.html  phase6_final_report_20250807_154738.html  phase6_final_report_20250807_155011.html
results/phase6_test_final/: phase6_final_report_20250807_155115.html
scripts/: analyze_hyperparameter_results.py  phase6_evaluation_main.py  update_optimal_config.py
src/: __init__.py
src/data/: basic_datasets.py  basic_transforms.py  create_simple_splits.py  data_organizer.py  data_preprocessing_pipeline.py  data_quality_assessment.py  data_splits.py  dataloaders.py  datasets.py  preprocessing.py  test_pipeline.py  transforms.py  visual_quality_checker.py
src/evaluation/: __init__.py  comprehensive_evaluator.py  explainability_analyzer.py  external_validator.py  metrics_calculator.py  visualization_generator.py
src/models/: __init__.py  backbone.py  basic_backbone.py  basic_multi_task_model.py  heads.py  multi_task_model.py  simple_multi_task_model.py
src/training/: __init__.py  basic_config.py  basic_losses.py  (+23 more)
tests/: count_images.py  create_test_checkpoint.py  create_test_datasets.py  debug_backbone.py  debug_config.py  debug_config_error.py  debug_model.py  debug_training_init.py  monitor_training.py  simple_config_test.py  simple_test.py  test_backbone_simple.py  test_heads_simple.py  test_integrated_simple.py  test_phase3.py  test_phase4.py  test_phase6.py  test_segmentation_weight.py  test_training_setup.py  test_uv_integration.py  verify_phase4.py
(+64 files in other folders)
