[project]
name = "diabetic-retinopathy"
version = "0.1.0"
description = "EfficientNetV2-S Multi-Task DR Grading & Lesion Segmentation Project"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "albumentations>=2.0.8",
    "gputil>=1.4.0",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.2",
    "opencv-python>=4.12.0.88",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pillow>=11.0.0",
    "plotly>=6.2.0",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.19",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchmetrics>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
# Phase 4 advanced features
phase4 = [
    "optuna>=4.0.0",
    "ray[tune]>=2.10.0",
    "wandb>=0.15.0",
    "rich>=13.5.0",
    "psutil>=5.9.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

# All optional dependencies
all = [
    "diabetic-retinopathy[phase4,dev]",
]

[project.scripts]
# Phase 4 training scripts
dr-train = "src.training.pipeline:main"
dr-train-phase4 = "train:main"
dr-examples = "examples.phase4_examples:main"
dr-optimize = "src.training.hyperparameter_optimizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
